--- a/src/app/misc/footer/footer.component.css
+++ b/src/app/misc/footer/footer.component.css
@@ -3,26 +3,33 @@ footer{
     color: whitesmoke;
     bottom: 0;
     width: 100%;
-    min-height: 180px;
+    min-height: 100px;
     box-shadow: lightgray 3px 3px 7px;
     border-radius: 5px;
     display: flex;
     flex-direction: column;
     align-items: flex-start;
+    padding-top: 20px;
    
   
+}
+
+li {
+  width: 20%;
+  text-align: center;
 }
 
 .footer-links a {
     list-style-type: none;
     text-decoration: none;
     /* padding: 10px; */
-    margin: 0;
+    margin: auto;
     color: white;
-    display: flex;
-    align-items: left;
+    display: inline;
+    align-items: center;
     font-size: 1em;
-  text-align: left;
+  
+  justify-content: space-around;
 }
 
 p {
@@ -30,6 +37,28 @@ p {
     justify-content: center;
     align-items: center;
     font-weight: bolder;
-    
-    
+      
+}
+
+.footer-links {
+  width: 100%;
+}
+
+.footer ul {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-around;
+  list-style-type: none;
+}
+
+.footer-ul-li {
+  display: flex;
+  align-items: center;
+  flex-direction: row;
+  justify-content: space-around;
+}
+
+.copyright {
+  margin:10px auto;
 }
