Fixed typo in header and detailed search

--- a/src/app/misc/header/header.component.html
+++ b/src/app/misc/header/header.component.html
@@ -16,7 +16,7 @@
         /></a>
       </div>
       <span class="quote"
-        >La reservation facile de votre vehicule de service</span
+        >La réservation facile de votre vehicule de service</span
       >
     </div>
 
