--- a/src/app/user/admin-interface/admin-interface.component.css
+++ b/src/app/user/admin-interface/admin-interface.component.css
@@ -1,3 +1,11 @@
+#admin-dashboard {
+    background-color: rgb(203, 224, 230);
+    width: 90%;
+    margin: 0 auto 10px;
+    padding-bottom: 5px;
+    border-radius: 5px;
+}
+
 h2 {
     margin-left: 10px;
 }
@@ -18,4 +26,11 @@ a {
     align-items: center;
     width: auto;
     margin-bottom: 10px;
+}
+
+@media screen and (min-width: 768px) {
+    #admin-dashboard {
+        margin-top: 10px;
+        width: 80%;
+    }
 }
