--- a/src/app/vehicle/vehicle-list/vehicle-list.component.css
+++ b/src/app/vehicle/vehicle-list/vehicle-list.component.css
@@ -3,10 +3,10 @@ body {
 }
 
 button {
-  height: auto;
-  width: auto;
-  justify-content: center;
-  margin-bottom: 20px;
+  margin: 20px 0;
+  width: 160px;
+  height: 40px;
+  align-self: end;
 }
 
 a {
@@ -22,12 +22,10 @@ a {
   margin: auto;
   background-color: #226175;
   color: whitesmoke;
-  border-radius: 10px;
-  border: 1px solid #eee;
   box-shadow: 0 2px 3px #ccc;
-  margin-bottom: 30px;
+  margin: 25px auto;
   opacity: 0.9;
-  max-width: 95%;
+  max-width: 90%;
 }
 
 li {
@@ -47,9 +45,8 @@ input {
 }
 
 label {
-  cursor: pointer;
-  display: flex;
-  justify-content: space-around;
+  margin: auto;
+  padding-top: 12px;
 }
 
 .error-message {
