--- a/src/app/vehicle/vehicle-search/vehicle-search.component.html
+++ b/src/app/vehicle/vehicle-search/vehicle-search.component.html
@@ -2,8 +2,7 @@
   <form [formGroup]="searchForm" (submit)="onSubmit()">
     <h2>Recherche détaillée de véhicules</h2>
 
-    <label for="start">Jour et heure de début</label><br />
-
+    <label for="start">Jour et heure de début</label>
     <input class="calendar"
       type="datetime-local"
       id="start"
@@ -15,7 +14,7 @@
       required
     /><br />
 
-    <label for="end">Jour et heure de fin</label><br />
+    <label for="end">Jour et heure de fin</label>
     <input class="calendar"
       type="datetime-local"
       id="end"
@@ -26,7 +25,7 @@
       required
     /><br />
 
-    <label for="type">Type de véhicule</label><br />
+    <label for="type">Type de véhicule</label>
     <select id="type-vehicule" name="type-vehicule" formControlName="type">
       <br />
       <option value="">Choisir</option>
@@ -36,7 +35,7 @@
     </select>
     <br />
 
-    <label for="energy">Énergie</label><br />
+    <label for="energy">Énergie</label>
 
     <select id="carburant" name="carburant" formControlName="energy">
       <br />
