--- a/src/app/reservation/reservation-card/reservation-card.component.html
+++ b/src/app/reservation/reservation-card/reservation-card.component.html
@@ -4,7 +4,7 @@
   [routerLink]="['/reservations/', reservation.id]"
 >
   <div id="resaCardHeader">
-    <span>Réservation n°{{ reservation.id }}{{ reservationPlaceCode }}</span
+    <span id="resa-number">Réservation n°{{ reservation.id }}{{ reservationPlaceCode }}</span
     ><span
       >Statut : {{ resaStatus }} le
       <span *ngIf="resaStatus == 'terminée'; else elseBlock">{{
