--- a/src/app/reservation/reservation-list/reservation-list.component.html
+++ b/src/app/reservation/reservation-list/reservation-list.component.html
@@ -1,3 +1,4 @@
+<h2>Liste des réservations</h2>
 <div>
     <app-reservation-card *ngFor="let reservation of reservationList" [reservation]="reservation">{{reservation.reason}}</app-reservation-card>
 </div>
