--- a/src/styles.css
+++ b/src/styles.css
@@ -5,6 +5,7 @@
 
 html,
 body {
+  height: 100%;
   font-family: "Poppins", sans-serif;
 }
 
@@ -36,7 +37,7 @@ button {
   text-decoration: none;
   color: #fff;
   font-weight: bold;
-  background-color: #538fbe;
+  background-color: #81b3d9;
   border: 1px solid #2d6898;
 
   box-shadow: 2 8px 32px 0 rgba(31, 38, 135, 0.37);
