Fixed reservation cancel confirm popup, reservation list true to figma

--- a/src/app/reservation/reservation-cancel/reservation-cancel.component.css
+++ b/src/app/reservation/reservation-cancel/reservation-cancel.component.css
@@ -1,31 +1,35 @@
 .cancel {
-
-    width: 90%;
-    border: 3px solid #807f7f69;
-    margin: auto;
-    border-radius: 10px;
-    margin-bottom: 20px;
-  
-}
-.cancel:hover {
-    background-color: #e7a30f;
-    color: white;
-    cursor: pointer;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  height: 250px;
+  width: 300px;
+  padding: 15px;
+  border: 3px solid #807f7f69;
+  border-radius: 10px;
+  margin: calc(50% - 70px) auto 20px;
 }
 
+#reason {
+    margin-top: 0.5rem;
+}
 
-@media screen and (min-width: 768px){
+button {
+    margin-bottom: 10px;
+    background-color: orangered;
+    width: 200px;
+    height: 2.5rem;
+}
 
-.cancel {
+@media screen and (min-width: 768px) {
+  .cancel {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
     text-align: center;
     background-color: azure;
-width: 35%;
-height: 200px;
-
-
-}
-    
+    width: 35%;
+    height: 200px;
+  }
 }
