--- a/src/app/reservation/reservation-cancel/reservation-cancel.component.html
+++ b/src/app/reservation/reservation-cancel/reservation-cancel.component.html
@@ -1,11 +1,18 @@
-<h1>Annulation</h1>
 <div class="cancel">
-Vous allez annuler la réservation n°{{reservationCancel.id}} <br>
+  <h2>Annulation</h2>
+  <div>
+    <p>
+      Vous allez annuler la réservation n°{{ reservationCancel.id }}
+      pour la période du
+      {{ reservationCancel.start_Date | date : "dd/MM/yyyy" }} au
+      {{ reservationCancel.end_Date | date : "dd/MM/yyyy" }}
+      à {{ reservationCancel.vehicle.fleet.place }}
+    </p>
 
-pour la période du <br>
- {{reservationCancel.start_Date | date:'dd/MM/yyyy'}} au {{reservationCancel.end_Date | date:'dd/MM/yyyy'}} <br> 
-à {{reservationCancel.vehicle.fleet.place}} <br>
+    <p id="reason">Motif : {{ reservationCancel.reason }}.</p>
+  </div>
 
-Motif : {{reservationCancel.reason}}. <br>
-
-<button type="button" (click)="confirmDeleteResa()">Confirmer l'annulation</button>
+  <button type="button" (click)="confirmDeleteResa()">
+    Confirmer l'annulation
+  </button>
+</div>
