--- a/src/app/vehicle/vehicle-add/vehicle-add.component.css
+++ b/src/app/vehicle/vehicle-add/vehicle-add.component.css
@@ -1,16 +1,16 @@
-#addVehicleBody {
-    display: flex;
-    justify-content: center;
-}
-
 #vehicleForm {
-    margin: 2rem 0;
+    margin: calc(50% - 110px) auto;
     padding: 10px 0;
-    width: 80vw;
+    width: 360px;
     display: flex;
     flex-direction: column;
     align-items: center;
-    background-color: lightgray;
+    background-color: white;
+}
+
+h2 {
+    text-decoration: underline;
+    margin-bottom: 1.5rem;
 }
 
 #brandField {
@@ -27,8 +27,6 @@
 #immatValidation {
     display: flex;
     flex-direction: column;
-    align-items: center;
-    justify-content: flex-start;
 }
 
 #immatInvalid {
@@ -42,14 +40,10 @@
     align-items: center;
 }
 
-select {
-    margin-bottom : 0.5rem;
-    width: 10rem;
-}
-
-input {
-    width: 10rem;
+input, select {
+    background-color: #d9d9d9;
     margin-bottom: 0.5rem;
+    width: 170px;
 }
 
 img {
@@ -60,4 +54,10 @@ img {
 span {
     display: inline-block;
     margin-bottom: 0.5rem;
+}
+
+button {
+    width: 150px;
+    height: 30px;
+    margin: 1rem 0;
 }
