--- a/src/app/misc/not-found/not-found.component.css
+++ b/src/app/misc/not-found/not-found.component.css
@@ -17,6 +17,12 @@ h2, p{
     color: whitesmoke;
     font-size: 2em;
     text-align: center;
-    /* margin-top: 0;
-    padding-top: 1vh; */
+}
+
+a {
+    color: floralwhite;
+}
+
+a:hover {
+    color: #226175;
 }
