--- a/src/app/misc/not-found/not-found.component.html
+++ b/src/app/misc/not-found/not-found.component.html
@@ -1,9 +1,7 @@
-
-
 <div class="not-found">
     <h1>404</h1>
     <div class="text">
-    <h2>Page not found</h2>
-    <p>Sorry, the page you are looking for does not exist.</p>
+    <h2>Page introuvable</h2>
+    <p>Il semblerait que la page que vous tentiez de rejoindre n'existe pas ! <a routerLink="/vehicles">Cliquez ici</a> pour revenir à l'accueil.</p>
 </div>
 </div>
